--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
     "manifest_version": 2,
     "name": "Japanease",
-    "description": "Lets the user type in Japanese using Hiragana and Katakana. Users can easily copy or search up the things they type.",
+    "description": "Lets the user type in Japanese. Users can choose between Hiragana, Katakana, or Kanji. Users can easily copy or search up the things they type.",
     "version": "1",
 
     "browser_action": {
-        "default_icon": "icon.png",
         "default_popup": "popup.html"
     }
 
